# -*- coding: utf-8 -*-

# Copyright © 2015 by DNV GL SE

# Makefile definitions for libBDFRead++.

# ID: $Id$
# $Date$
# $Revision$
# Author Berthold Höllmann <berthold.hoellmann@dnvgl.com>

# For use with: automake
# Relative File Name: include/Makefile.am

top=../

EXTRA_DIST=bdf_cards.h
EXTRA_DIST+=bdf_errors.h
EXTRA_DIST+=bdf_file.h
EXTRA_DIST+=bdf_string.h
EXTRA_DIST+=bdf_types.h
EXTRA_DIST+=stdafx.h

SUBDIRS=


# Local Variables:
# mode: makefile
# ispell-local-dictionary: "english"
# compile-command: "make -C .. check -j 7"
# End:

# End of Makefile.am
