# -*- coding: utf-8 -*-

# Copyright © 2015 by DNV GL SE

# Makefile definitions for libExtFEMRead++.

# ID: $Id$
# $Date$
# $Revision$
# Author Berthold Höllmann <berthold.hoellmann@dnvgl.com>

# For use with: automake
# Relative File Name: include/Makefile.am

top=../

EXTRA_DIST=bdf/cards.h
EXTRA_DIST+=bdf/cards_elements.h
EXTRA_DIST+=bdf/cards_properties.h
EXTRA_DIST+=bdf/errors.h
EXTRA_DIST+=bdf/file.h
EXTRA_DIST+=bdf/string.h
EXTRA_DIST+=bdf/types.h
EXTRA_DIST+=catch.hpp
EXTRA_DIST+=my_c++14.h
EXTRA_DIST+=stdafx.h

SUBDIRS=


# Local Variables:
# mode: makefile
# ispell-local-dictionary: "english"
# compile-command: "make -C .. check -j 7"
# End:

# End of Makefile.am
